# ezanchor

./: README.md  main.py  main_notebook.ipynb  main_simple.py  pyproject.toml  requirements.txt
AHU4-stiltMode_run_results1/: AHU4-stiltMode_anchors.csv  AHU4-stiltMode_equipment.csv
AHU4_run_results/: AHU4_equipment.csv
docs/: animation_script.py  simplecase.py
ezanchor/: __init__.py  anchor.py  equipment.py  plotter.py
