[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"



[project]
name = "ezanchor"
version = "1.0.0"
authors = [
  { name="wcfrobert", email="wcfrobert@gmail.com" },
]
description = "Nonstructural Component Anchorage Calculation"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/wcfrobert/ezanchor"
"Bug Tracker" = "https://github.com/wcfrobert/ezanchor/issues"